--- a/SpoofifyClient/src/app/app.component.html
+++ b/SpoofifyClient/src/app/app.component.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 offset-sm-3">
-                <app-login></app-login>
+                <h1>{{title}}</h1>
                 <router-outlet></router-outlet>
             </div>
         </div>
