--- a/SpoofifyClient/src/app/login/login.component.html
+++ b/SpoofifyClient/src/app/login/login.component.html
@@ -1,17 +1,24 @@
 <div class="container">
-    <form (ngSubmit) = "onSubmit()">
-        <div class="form-group">
-          <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter email" required [(ngModel)] = "email" name = "email">
+      <div class = "row">
+        <div class = "col">
+            <form (ngSubmit) = "onSubmit()">
+                <div class="form-group">
+                  <label for="email">Email address</label>
+                  <input type="email" class="form-control" id="email" placeholder="Enter email" required [(ngModel)] = "email" name = "email">
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input type="password" class="form-control" id="password" placeholder="Password" required [(ngModel)] = "password" name = "password">
+                </div>
+                <div class="alert alert-danger" role="alert" *ngIf = "errmsg">
+                  {{errmsg}}
+                </div>
+                <button type="submit" class="btn btn-success">Submit</button>
+              </form>
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" required [(ngModel)] = "password" name = "password">
+        <div class = "col text-center">
+            <div class = h3>New User? Sign Up</div>
+            <button type="button" (click) = "goRegister()" class="btn btn-warning">Register</button>
         </div>
-        <div class="alert alert-danger" role="alert" *ngIf = "errmsg">
-          {{errmsg}}
-        </div>
-        <button type="submit" class="btn btn-success">Submit</button>
-      </form>
-
+      </div>
 </div>
