--- a/SpoofifyClient/src/app/login/login.component.html
+++ b/SpoofifyClient/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
       <div class = "row">
         <div class = "col">
-            <form (ngSubmit) = "onSubmit()">
+            <form (ngSubmit) = "login()">
                 <div class="form-group">
                   <label for="email">Email address</label>
                   <input type="email" class="form-control" id="email" placeholder="Enter email" required [(ngModel)] = "email" name = "email">
