--- a/SpoofifyClient/src/app/register/register.component.html
+++ b/SpoofifyClient/src/app/register/register.component.html
@@ -1,1 +1,28 @@
-<p>register works!</p>
+<div class="container">
+    <form (ngSubmit)="register()">
+        <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" required [(ngModel)]="email"
+                name="email">
+        </div>
+        <div class="form-group">
+                <label for="username">Username</label>
+                <input type="username" class="form-control" id="username" placeholder="Enter username" required [(ngModel)]="username"
+                    name="username">
+            </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password" required
+                [(ngModel)]="password" name="password">
+        </div>
+        <div class="form-group">
+                <label for="passconf">Confirm Password</label>
+                <input type="password" class="form-control" id="passconf" placeholder="Password" required
+                    [(ngModel)]="passconf" name="passconf">
+            </div>
+        <div class="alert alert-danger" role="alert" *ngIf="errmsg">
+            {{errmsg}}
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+</div>
