--- a/SpoofifyClient/src/app/albums/albums.component.html
+++ b/SpoofifyClient/src/app/albums/albums.component.html
@@ -12,10 +12,13 @@
               <td>{{album.artist}}</td>
               <td>{{album.genre}}</td>
               <td>
-                <div class = "col text-center">
-                    <button type="button" (click) = "goHome()" class="btn btn-warning">+</button>
+                <div class = "col text-center" *ngIf="!authService.currentUser; else loggedIn">
+                    <button type="button" (click) = "notLoggedIn()" class="btn btn-warning">+</button>
                 </div>
               </td>
             </tr>
           </table>
 </div>
+<ng-template #loggedIn>
+    <button type="button" (click) = "saveAlbum()" class="btn btn-warning">+</button>
+</ng-template>
