--- a/SpoofifyClient/src/app/songs/songs.component.html
+++ b/SpoofifyClient/src/app/songs/songs.component.html
@@ -18,10 +18,13 @@
               <td>{{song.duration}}</td>
               <td>{{song.plays}}</td>
               <td>
-                <div class = "col text-center">
-                    <button type="button" (click) = "goHome()" class="btn btn-warning">+</button>
+                <div class = "col text-center" *ngIf="!authService.currentUser; else loggedIn">
+                    <button type="button" (click) = "notLoggedIn()" class="btn btn-warning">+</button>
                 </div>
               </td>
             </tr>
           </table>
 </div>
+<ng-template #loggedIn>
+    <button type="button" (click) = "saveSong()" class="btn btn-warning">+</button>
+</ng-template>
