--- a/SpoofifyClient/src/app/albums/albums.component.html
+++ b/SpoofifyClient/src/app/albums/albums.component.html
@@ -12,13 +12,18 @@
               <td>{{album.artist}}</td>
               <td>{{album.genre}}</td>
               <td>
-                <div class = "col text-center" *ngIf="!authService.currentUser; else loggedIn">
-                    <button type="button" (click) = "notLoggedIn()" class="btn btn-warning">+</button>
-                </div>
-              </td>
+                  <div class = "col text-center" *ngIf="authService.currentUser; else notLoggedIn">
+                    <ng-container *ngIf="!savedAlbums.includes(album._id); else disableButton">
+                      <button type="button" (click) = "saveAlbum(album._id)" class="btn btn-warning">+</button>
+                    </ng-container>
+                  </div>
+                </td>
+                <ng-template #notLoggedIn>
+                    <button type="button" (click) = "displayLogin()" class="btn btn-warning">+</button>
+                </ng-template>
+                <ng-template #disableButton>
+                    <button type="button" (click) = "removeAlbum(album._id)" class="btn btn_warning">✔</button>
+                </ng-template>
             </tr>
           </table>
 </div>
-<ng-template #loggedIn>
-    <button type="button" (click) = "saveAlbum()" class="btn btn-warning">+</button>
-</ng-template>
