added playlist page

--- a/SpoofifyClient/src/app/app.component.html
+++ b/SpoofifyClient/src/app/app.component.html
@@ -31,6 +31,9 @@
             <div class = "col text-center">
                 <button type="button" (click) = "goArtists()" class="btn btn-warning">Artists</button>
             </div>
+            <div class = "col text-center">
+                    <button type="button" (click) = "goPlaylists()" class="btn btn-warning">Playlists</button>
+                </div>
         </div>
     </div>
 </div>
