home page and other pages functionality

--- a/SpoofifyClient/src/app/albums/albums.component.scss
+++ b/SpoofifyClient/src/app/albums/albums.component.scss
@@ -14,3 +14,11 @@ th {
     color: green;
     background: lightgray;
   }
+
+  .btn-remove:hover span{
+    display:none
+  }
+  
+  .btn-remove:hover:before {
+    content:"❌";
+  }
