--- a/SpoofifyClient/src/app/playlist/playlist.component.scss
+++ b/SpoofifyClient/src/app/playlist/playlist.component.scss
@@ -19,3 +19,15 @@ ul {
   list-style: none;
   padding-left: 0;
 }
+
+.edit-btn{
+  padding-bottom: 30px;
+}
+
+.btn-remove:hover span{
+  display:none
+}
+
+.btn-remove:hover:before {
+  content:"❌";
+}
