--- a/SpoofifyClient/src/app/home/home.component.scss
+++ b/SpoofifyClient/src/app/home/home.component.scss
@@ -1,3 +1,33 @@
 .loginText{
     padding-bottom: 30px;
 }
+
+table{
+    border: 1px solid black;
+    width: 100%;
+}
+
+th {
+  height: 50px;
+  background: green;
+  color: white;
+}
+
+td {
+  height: 50px;
+  color: green;
+  background: lightgray;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.btn-remove:hover span{
+  display:none
+}
+
+.btn-remove:hover:before {
+  content:"❌";
+}
