--- a/SpoofifyClient/src/app/songs/songs.component.html
+++ b/SpoofifyClient/src/app/songs/songs.component.html
@@ -11,10 +11,20 @@
               <th>Add to Saved Songs</th>
             </tr>
             <tr *ngFor="let song of songs" >
-              <td>{{song.title}}</td>
-              <td>{{song.album}}</td>
-              <td>{{song.artist}}</td>
-              <td>{{song.features}}</td>
+              <td>
+                <a href={{song.spotify}}>{{song.title}}</a>
+              </td>
+              <td>
+                <a href={{song.album.spotify}}>{{song.album.title}}</a>
+              </td>
+              <td>
+                <a href={{song.artist.spotify}}>{{song.artist.name}}</a>
+              </td>
+              <td>
+                <ul *ngFor="let feature of song.features">
+                  <a href={{feature.spotify}}>{{feature.name}}</a>
+                </ul>
+              </td>
               <td>{{song.duration}}</td>
               <td>{{song.plays}}</td>
               <td>
@@ -28,7 +38,9 @@
                   <button type="button" (click) = "displayLogin()" class="btn btn-warning">+</button>
               </ng-template>
               <ng-template #disableButton>
-                  <button type="button" (click) = "removeSong(song._id)" class="btn btn_warning">✔</button>
+                  <button type="button" (click) = "removeSong(song._id)" class="btn-remove btn-warning">
+                      <span>✔</span>
+                  </button>
               </ng-template>
             </tr>
           </table>
