--- a/SpoofifyClient/src/app/playlist/playlist.component.scss
+++ b/SpoofifyClient/src/app/playlist/playlist.component.scss
@@ -31,3 +31,10 @@ ul {
 .btn-remove:hover:before {
   content:"❌";
 }
+
+.playlist-header{
+  font-size: 36px;
+  font-weight: bold;
+  font-family:"Arial Black", Gadget, sans-serif;
+  padding-bottom: 30px;
+}
