--- a/SpoofifyClient/src/app/playlist/playlist.component.html
+++ b/SpoofifyClient/src/app/playlist/playlist.component.html
@@ -1,17 +1,18 @@
 <div class = "col text-center">
+    <div class = "col text-center playlist-header">
+          {{playlist.title}}
+    </div>
   <div class="edit-btn" *ngIf="authService.currentUser && current_user == authService.currentUser.user._id">
     <button type="button" (click) = "editPlaylist(playlist._id)" class="btn btn-warning">Edit Playlist</button>
   </div>
     <table style="width:100%" >
             <tr *ngIf="playlist">
-              <th>Playlist Name</th>
               <th>Creator</th>
               <th>Followers</th>
               <th>Songs in Playlist</th>
               <th>Add to Saved Playlists</th>
             </tr>
             <tr *ngIf="playlist">
-              <td>{{playlist.title}}</td>
               <td>{{playlist.creator}}</td>
               <td>{{playlist.followers}}</td>
               <td >
