added followers and number of plays

--- a/SpoofifyClient/src/app/album/album.component.html
+++ b/SpoofifyClient/src/app/album/album.component.html
@@ -14,11 +14,11 @@
           </tr>
           <tr *ngFor="let song of songs" >
             <td>
-              <a href={{song.spotify}}>{{song.title}}</a>
+              <a href={{song.spotify}} (click)="addListen(song._id, song.plays)">{{song.title}}</a>
             </td>
             <td>
-              <a href={{song.artist.spotify}}>{{song.artist.name}}</a>
-            </td>
+                <button type="button" (click)="goArtist(song.artist._id)" class="btn btn-warning">{{song.artist.name}}</button>
+              </td>
             <td>{{song.duration}}</td>
             <td>{{song.plays}}</td>
             <td>
