--- a/SpoofifyClient/src/app/playlist/playlist.component.html
+++ b/SpoofifyClient/src/app/playlist/playlist.component.html
@@ -1,29 +1,28 @@
 <div class = "col text-center">
-    <div class = "col text-center playlist-header">
-          {{playlist.title}}
-    </div>
   <div class="edit-btn" *ngIf="authService.currentUser && current_user == authService.currentUser.user._id">
     <button type="button" (click) = "editPlaylist(playlist._id)" class="btn btn-warning">Edit Playlist</button>
   </div>
     <table style="width:100%" >
             <tr *ngIf="playlist">
+              <th>Playlist Name</th>
               <th>Creator</th>
               <th>Followers</th>
               <th>Songs in Playlist</th>
               <th>Add to Saved Playlists</th>
             </tr>
             <tr *ngIf="playlist">
+              <td>{{playlist.title}}</td>
               <td>{{playlist.creator}}</td>
               <td>{{playlist.followers}}</td>
               <td >
                 <ul *ngFor="let song of playlist.songs">
-                  <a href={{song.spotify}}>{{song.title}}</a>
+                  <a href={{song.spotify}} (click)="addListen(song._id, song.plays)">{{song.title}}</a>
                 </ul>
               </td>
               <td>
                   <div class = "col text-center" *ngIf="authService.currentUser; else notLoggedIn">
                     <ng-container *ngIf="!savedPlaylists.includes(playlist._id); else disableButton">
-                      <button type="button" (click) = "savePlaylist(playlist._id)" class="btn btn-warning">+</button>
+                      <button type="button" (click) = "savePlaylist(playlist._id, playlist.followers)" class="btn btn-warning">+</button>
                     </ng-container>
                   </div>
                 </td>
@@ -31,7 +30,7 @@
                     <button type="button" (click) = "displayLogin()" class="btn-add btn-warning">+</button>
                 </ng-template>
                 <ng-template #disableButton>
-                    <button type="button" (click) = "removePlaylist(playlist._id)" class="btn-remove btn-warning">
+                    <button type="button" (click) = "removePlaylist(playlist._id, playlist.followers)" class="btn-remove btn-warning">
                         <span>✔</span>
                     </button>
                 </ng-template>
