--- a/SpoofifyClient/src/app/playlists/playlists.component.html
+++ b/SpoofifyClient/src/app/playlists/playlists.component.html
@@ -1,5 +1,28 @@
 <div class = "col text-center">
-
+  <div class="card text-white bg-dark mb-3">
+    <button type="button" class="btn btn-dark btn-lg btn-block" data-toggle="modal" data-target="#newPlaylist">Create a New Playlist</button>
+    </div>
+    <div class="modal fade" id="newPlaylist" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">New Playlist</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Playlist Name
+            <input type = "text" [(ngModel)]="newname"
+              name="username" />
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="newPlaylist()">Create Playlist</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <table style="width:100%" >
             <tr>
               <th>Playlist Name</th>
