--- a/SpoofifyClient/src/app/artists/artists.component.html
+++ b/SpoofifyClient/src/app/artists/artists.component.html
@@ -1,5 +1,7 @@
 <div class = "col text-center">
-
+    <div class="text-center">
+        <a href="" class="btn btn-danger btn-rounded mb-4" data-toggle="modal" data-target="#artistForm">Add An Artist</a>
+      </div>
     <table style="width:100%" >
             <tr>
               
