--- a/SpoofifyClient/src/app/songs/songs.component.html
+++ b/SpoofifyClient/src/app/songs/songs.component.html
@@ -1,4 +1,7 @@
 <div class = "col text-center">
+    <div class="text-center">
+        <a href="" class="btn btn-danger btn-rounded mb-4" data-toggle="modal" data-target="#songtForm">Add A Song</a>
+      </div>
     <table id="songTable" style="width:100%" >
             <tr>
               <th>Song Title</th>
