added edit playlist

--- a/SpoofifyClient/src/app/artists/artists.component.html
+++ b/SpoofifyClient/src/app/artists/artists.component.html
@@ -49,17 +49,17 @@
       <div class="modal-body mx-3">
         <div class="form-group">
           <i class="fas fa-envelope prefix grey-text"></i>
-          <label>Title:</label>
+          <label>Name:</label>
           <input type="text" id="name" name="name" class="form-control validate" required [(ngModel)]="name">
         </div>
         <div class="form-group">
-            <label>Album:</label>
+            <label>Summary:</label>
           <i class="fas fa-lock prefix grey-text"></i>
           <textarea rows="7" style="resize:none" id="summary" name="summary" class="form-control validate" [(ngModel)]="summary"></textarea>
         </div>
       </div>
         <div class="modal-footer d-flex justify-content-center">
-          <button data-dismiss="modal" class="close btn btn-default" type="submit">Add Song</button>
+          <button class="close btn btn-default" type="submit">Add Artist</button>
         </div>
       </form>
     </div>
