--- a/SpoofifyClient/src/app/songs/songs.component.html
+++ b/SpoofifyClient/src/app/songs/songs.component.html
@@ -1,11 +1,33 @@
 <div class = "col text-center">
+    <div class="modal fade" id="songtoPlaylist" tabindex="-1" role="dialog" aria-labelledby="Playlistmodal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Add Song To A Playlist</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div *ngFor = "let pl of pls">
+                  <button type="button" class="btn btn-lg btn-block btn-dark" (click) = songtoPlaylist(pl._id) data-dismiss="modal">{{pl.title}}</button>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
     <table id="songTable" style="width:100%" >
             <tr>
               <th>Song Title</th>
               <th>Album</th>
               <th>Artist</th>
               <th>Song Duration</th>
-              <th>Number of Plays</th>
+              <th>Number of Plays</th>      
+              <th>Add to a Playlist</th>
               <th>Add to Saved Songs</th>
             </tr>
             <tr *ngFor="let song of songs" >
@@ -20,13 +42,24 @@
               </td>
               <td>{{song.duration}}</td>
               <td>{{song.plays}}</td>
+
+              <td>
+                  <div class = "col text-center" *ngIf="authService.currentUser; else notLoggedIn">
+                    <ng-container>
+                      <button type="button" (click) = "addtoPlaylist(song._id)" class="btn btn-warning" data-toggle="modal" data-target="#songtoPlaylist">+</button>
+                    </ng-container>
+                  </div>
+                </td>
+
               <td>
                 <div class = "col text-center" *ngIf="authService.currentUser; else notLoggedIn">
                   <ng-container *ngIf="!savedSongs.includes(song._id); else disableButton">
+                    
                     <button type="button" (click) = "saveSong(song._id)" class="btn btn-warning">+</button>
                   </ng-container>
                 </div>
               </td>
+  
               <ng-template #notLoggedIn>
                   <button type="button" (click) = "displayLogin()" class="btn btn-warning">+</button>
               </ng-template>
