minor changes to text

--- a/SpoofifyClient/src/app/editPlaylist/editPlaylist.component.html
+++ b/SpoofifyClient/src/app/editPlaylist/editPlaylist.component.html
@@ -6,7 +6,7 @@
               <th>Artist</th>
               <th>Song Duration</th>
               <th>Number of Plays</th>
-              <th>Add to Saved Songs</th>
+              <th>Add to Playlist's Songs</th>
             </tr>
             <tr *ngFor="let song of songs" >
               <td>
