added scrollable in home page

--- a/SpoofifyClient/src/app/home/home.component.html
+++ b/SpoofifyClient/src/app/home/home.component.html
@@ -11,7 +11,7 @@
 
 <ng-template #loggedIn>
     <div class="row">
-        <div class = "col-md-6 text-center">
+        <div class = "col-md-6 text-center" style="height:500px; overflow:auto">
                 <table id="songTable" style="width:100%" >
                         <tr>
                           <th>Song Title</th>
@@ -43,7 +43,7 @@
                         </tr>
                       </table>
         </div>
-        <div class = "col-md-6 text-center">
+        <div class = "col-md-6 text-center" style="height:500px; overflow:auto">
                 <table style="width:100%" >
                         <tr>
                           <th>Album Name</th>
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div class="row">
-        <div class = "col-md-6 text-center">
+        <div class = "col-md-6 text-center" style="height:500px; overflow:auto">
                 <table style="width:100%" >
                         <tr>
                           <th>Artist Name</th>
@@ -95,7 +95,7 @@
                         </tr>
                       </table>
         </div>
-        <div class = "col-md-6 text-center">
+        <div class = "col-md-6 text-center" style="height:500px; overflow:auto">
                 <table style="width:100%" >
                         <tr>
                           <th>Playlist Name</th>
