changed home buttons added readme

--- a/SpoofifyClient/src/app/home/home.component.html
+++ b/SpoofifyClient/src/app/home/home.component.html
@@ -36,7 +36,7 @@
                           <td>
                             <div class = "col text-center">
                                 <button type="button" (click) = "removeSong(song._id)" class="btn-remove btn-warning">
-                                    <span>✔</span>
+                                    <span>❌</span>
                                 </button>
                             </div>
                         </td>
@@ -62,7 +62,7 @@
                           <td>
                               <div class = "col text-center">
                                   <button type="button" (click) = "removeAlbum(album._id)" class="btn-remove btn-warning">
-                                    <span>✔</span>
+                                    <span>❌</span>
                                   </button>
                               </div>
                             </td>
@@ -88,7 +88,7 @@
                           <td>
                               <div class = "col text-center">
                                   <button type="button" (click) = "removeArtist(artist._id, artist.followers)" class="btn-remove btn-warning">
-                                    <span>✔</span>
+                                    <span>❌</span>
                                   </button>
                               </div>
                             </td>
@@ -112,7 +112,7 @@
                           <td>
                               <div class = "col text-center">
                                     <button type="button" (click) = "removePlaylist(p._id, p.followers)" class="btn-remove btn-warning">
-                                            <span>✔</span>
+                                            <span>❌</span>
                                     </button>
                               </div>
                             </td>
